test/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image5000-deployment
  labels:
    app: image5000
spec:
  replicas: 3
  selector:
    matchLabels:
      app: image5000
  template:
    metadata:
      labels:
        app: image5000
    spec:
      restartPolicy: Always
      containers:
      - name: image5000
        image: mm12063/image5000:4.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: app-pv
            mountPath: /home/mnist_model
      volumes:
        - name: app-pv
          persistentVolumeClaim:
            claimName: model-holder
