test/deploy/deployment_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-image5000-2-deployment
  labels:
    app: image5000-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: image5000-2
  template:
    metadata:
      labels:
        app: image5000-2
    spec:
      restartPolicy: Always
      containers:
      - name: image5000-2
        image: mm12063/image5000_2:3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: app-pv
            mountPath: /home/mnist_model
      volumes:
        - name: app-pv
          persistentVolumeClaim:
            claimName: model-holder
