test/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public-iks-k8s-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: k8s-alb-health
  namespace: kube-system
spec:
  rules:
  - host: albhealth.mm12063-hw5-cluster-1-v2-4f27b99c6360f285c2c732f9adc614f1-0000.us-south.containers.appdomain.cloud
    http:
      paths:
      - backend:
          service:
            name: ibm-k8s-controller-health
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - albhealth.mm12063-hw5-cluster-1-v2-4f27b99c6360f285c2c732f9adc614f1-0000.us-south.containers.appdomain.cloud
    secretName: mm12063-hw5-cluster-1-v2-4f27b99c6360f285c2c732f9adc614f1-0000
