test/deploy/service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  labels:
#    app: image5000-deployment
#  name: image5000-deployment
#spec:
#  type: LoadBalancer
#  selector:
#    app: test-file-2-deployment
#  ports:
#  - name: default
#    protocol: TCP
#    port: 5000
#    targetPort: 5000

apiVersion: v1
kind: Service
metadata:
  name: image5000
  labels:
    app: image5000
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: image5000
